them padding, bo border, fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,7 @@ header #label-list {
 
 #label-list-button {
     border-radius: 300px;
+    border: none;
 }
 
 
@@ -121,7 +122,7 @@ header #label-list {
 
 #welcome h2 {
     font-size: 3.12em;
-    height: 3.12em;
+    /* height: 3.12em; */
 }
 
 #welcome p {
@@ -218,19 +219,32 @@ header #label-list {
 
 #statistics #pack {
     display: flex;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
+    justify-content: center;
     width: 100%;
 }
 
 #statistics #pack #s {
     width: 25%;
+    /* float: left; */
+    margin-left: 100px;
+    text-align: center;
     height: 150px;
 }
 
-#statistics #pack #s h3 {
-    /* font-size: 3.12em; */
-    font-size: 15px;
-    margin: auto;
+#statistics h3 {
+    font-size: 3.12em;
+    /* font-size: 15px; */
+    /* margin: auto; */
+    margin-left: 1rem;
+}
+
+#statistics .s1,
+.s2,
+.s3,
+.s4 {
+    text-align: center;
+    margin: 5%;
 }
 
 
@@ -240,6 +254,7 @@ header #label-list {
     padding: 3.12rem;
     width: 100%;
     display: flex;
+    justify-items: flex-start;
 }
 
 #services h2 {
@@ -263,6 +278,7 @@ header #label-list {
     flex: 3;
     display: flex;
     flex-wrap: wrap;
+    margin-left: 5%;
 }
 
 .right-Grooming {
@@ -473,6 +489,7 @@ header #label-list {
     margin-top: 1rem;
     width: 100%;
     height: 50px;
+    padding: 2%;
 }
 
 .main2 textarea {
@@ -531,6 +548,7 @@ header #label-list {
 .footer input {
     width: auto;
     height: 50px;
+    border: none;
 }
 
 #color-smt {
